telerun-out/0207056/compile-log.txt
/tmp/tmps1_gwczo/source.cu(203): error: expected a type specifier
                                 ) {
                                 ^

1 error detected in the compilation of "/tmp/tmps1_gwczo/source.cu".
